--- a/libft/Makefile
+++ b/libft/Makefile
@@ -5,7 +5,7 @@ SRCS = \
 	ft_memmove.c ft_memchr.c ft_memcmp.c ft_putchar_fd.c ft_putstr_fd.c \
 	ft_putendl_fd.c ft_putnbr_fd.c ft_striteri.c ft_strnstr.c ft_split.c \
 	ft_strjoin.c ft_substr.c ft_strdup.c ft_calloc.c ft_strmapi.c \
-	ft_itoa.c ft_strtrim.c
+	ft_itoa.c ft_strtrim.c ft_printf.c ft_printf_utils.c
 BSRCS = \
 	ft_lstnew_bonus.c ft_lstsize_bonus.c ft_lstadd_front_bonus.c \
 	ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstiter_bonus.c \
